@@ -7,7 +7,8 @@ ChangeLog
 GIT HEAD
 
 - Introducing a brand new user preference on eye-candy: cf.Help
-  /Configure.../Options/Custom style theme.
+  /Configure.../Options/Custom style theme (applies to the JACK
+  stand-alone client only though).
 - Envelope and filter now rendered with anti-aliased lines.
 - Fixed a Qt5 FTBFS re. QHeaderView::set[Section]ResizeMode().
 
